--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./dog/client/client.exe
-./dog/server/server.exe
+./gRpc/client/client.exe
+./gRpc/server/server.exe
 
-./music/music.exe
+./kvs/kvs.exe
